--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,21 @@
 
     <dependencies>
 
+
+        <!-- spring与shiro集成包 -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+        <!-- thymeleaf对shiro的扩展坐标 -->
+        <dependency>
+            <groupId>com.github.theborakompanioni</groupId>
+            <artifactId>thymeleaf-extras-shiro</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+
         <!--thymeleaf-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
