--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,22 @@
     <version>1.0.0</version>
     <name>springboot_auth</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>war</packaging>
+
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
+
+            <maven.compiler.source>1.8</maven.compiler.source>
+            <maven.compiler.target>1.8</maven.compiler.target>
+
     </properties>
 
     <dependencies>
+
 
 
         <!-- spring与shiro集成包 -->
@@ -29,6 +36,13 @@
             <groupId>com.github.theborakompanioni</groupId>
             <artifactId>thymeleaf-extras-shiro</artifactId>
             <version>2.0.0</version>
+        </dependency>
+
+        <!--shiro缓存插件-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-ehcache</artifactId>
+            <version>1.7.0</version>
         </dependency>
 
 
@@ -120,17 +134,53 @@
     </dependencyManagement>
 
     <build>
+
+        <finalName>auth</finalName>
+
         <!--目的：将数据持久层映射文件编译到classpath中-->
         <resources>
+
+            <!--mybatis的mapper.xml-->
             <resource>
                 <directory>src/main/java</directory>
                 <includes>
                     <include>**/*.xml</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+            <!--src/main/resources下的所有配置文件编译到classes下面去-->
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+            </resource>
+            <resource>
+                <!--源文件位置-->
+                <directory>src/main/webapp</directory>
+                <!--编译到META-INF/resources，该目录不能随便写-->
+                <targetPath>META-INF/resources</targetPath>
+                <includes>
+                    <!--要把哪些文件编译过去，**表示webapp目录及子目录，*.*表示所有-->
+                    <include>**/*.*</include>
+                </includes>
+            </resource>
+
         </resources>
 
         <plugins>
+
+            <!--SpringBoot 的打包插件-->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
 
 
             <!--mybatis代码自动生成插件-->
@@ -146,7 +196,10 @@
                 </configuration>
             </plugin>
 
-            <plugin>
+         <!--   <plugin>
+
+
+
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
@@ -155,8 +208,8 @@
                     <target>11</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
-            </plugin>
-            <plugin>
+            </plugin>-->
+           <!-- <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.3.4.RELEASE</version>
@@ -171,7 +224,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
