--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/springboot_auth
 
 
 #配置连接MySQL数据库信息
-spring.datasource.url=jdbc:mysql://192.168.137.130:3306/crm_auth?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/crm_auth?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
